--- a/templates/Member_Profile.html
+++ b/templates/Member_Profile.html
@@ -31,31 +31,31 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-2">Email : </div>
-            <div class="col text-center">{{ session["email"] }}</div>
+            <div class="col text-center"><!-- 放資料 --></div>
             <div class="col-5"></div>
         </div>
         <div class="row">
             <div class="col-3"></div>
             <div class="col-2">Password : </div>
-            <div class="col text-center">{{ row["password"] }}</div>
+            <div class="col text-center"><!-- 放資料 --></div>
             <div class="col-5"></div>
         </div>
         <div class="row">
             <div class="col-3"></div>
             <div class="col-2">Birth Date : </div>
-            <div class="col text-center">{{ row["Bdate"] }}</div>
+            <div class="col text-center"><!-- 放資料 --></div>
             <div class="col-5"></div>
         </div>
         <div class="row">
             <div class="col-3"></div>
             <div class="col-2">Cellphone : </div>
-            <div class="col text-center">{{ row["phone"] }}</div>
+            <div class="col text-center"><!-- 放資料 --></div>
             <div class="col-5"></div>
         </div>
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-2">Address(Country) : </div>
-            <div class="col text-center">{{ row["address"] }}</div>
+            <div class="col-2">Address : </div>
+            <div class="col text-center"><!-- 放資料 --></div>
             <div class="col-5"></div>
         </div>
         <p style="text-align: center;"><br>
