--- a/templates/Register.html
+++ b/templates/Register.html
@@ -51,6 +51,10 @@
                             <label class="form-label">Address(Country):</label>
                             <input type="tel" class="form-control" name="address">
                         </div>
+                        <div class="col-md-12">
+                            <label class="form-label">Is_Seller(True=1,False=0):</label>
+                            <input type="number" class="form-control" name="is_seller">
+                        </div>
                         <br>
                         <div class="col-md-12 text-center">
                             <button type="submit" value="register" class="btn btn-primary">Submit</button>
