--- a/templates/ShoppingCart.html
+++ b/templates/ShoppingCart.html
@@ -1,79 +1,87 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title> Shopping_cart </title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="style.css">
-
-</head>
-
+    <head>
+        <title>Shopping_Cart</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=, initial-scale=1.0">
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
+    </head>
 <body>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-        <div class="container">
-            <div class="row">
-                <p><h1>Shopping Cart</h1></p>
-                <div class="col-sm-12">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Product_Name</th>
-                                <th>Price</th>
-                                <th>Product_id</th>
-                                <th>Amount</th>
-                                <th>Edit</th>
-                            </tr>
-                        </thead>
-                        
-                        <tbody>
-                         {% if 'cart_item' in session %}
-                         {% for key, value in session['cart_item'].items() %}
-                         {% set product_name = session['cart_item'][key]['name'] %}
-                         {% set price = session['cart_item'][key]['price'] %}
-                         {% set product_id = session['cart_item'][key]['product_id'] %}
-                         <tr>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ product_name }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ price }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ product_id }} </strong></td>
-                            <td class="col-sm-3 col-md-3" style="text-align: center">
-                                <input type="email" class="form-control" value="{{ quantity }}">
-                            </td>
-                            <!-- <td calss="col-sm-3 col-md-3"> <input type = 'number' step = '1' min = '0' max = '20'/> </td> -->
-                            <td class="col-sm-3 col-md-3">                              
-                                <a href = "{{ url_for('delete_product', product_id = session['cart_item'][key]['product_id']) }}" button type="submit" class="btn btn-danger">
-                                   Delete
-                                </a>
-                                <!-- <form action="/delete" method="POST">
-                                    <input type="hidden" name="product_id" value="{{ product_id }}">
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </form> -->
-                                 
-                            </td>          
-                        </tr>
-                        {% endfor %}
-                        {% endif %}
-                        <tr>
-                            <td class="col-4">
-                                <form action="/buy" method="POST">
-                                    <button type="submit" class="btn btn-info"> Add </button>
-                                </form>
-                            </td> 
-                            <td class="col-4">
-                                <form action="{{ url_for('product') }}">
-                                    <button type="submit" class="btn btn-secondary"> 回到主畫面 </button>
-                                </form>
-                            </td>
-                        </tr>
-                        
-                    </tbody>
-                    </table>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{url_for('home')}}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
+                    <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
+                </svg>
+            </a>
+            <h1 style="margin: auto;"><strong>五星好蘋</strong></h1>
+            <a href="{{url_for('logout')}}" class="btn btn-primary">Logout</a>
+        </div>
+    </nav>
+    <br><br><h1 style="margin-right: 400px; text-align: center;"
+            class="display-4">Shopping Cart</h1><br>
+
+    <table class="table table-bordered text-center container" style="width: 40%; margin: auto;">
+        <thead class="bg-light">
+            <tr>
+                <th>Product_Name</th>
+                <th>Price</th>
+                <th>Product_id</th>
+                <th>Amount</th>
+                <th>#</th>
+            </tr>
+        </thead>
+            
+        <tbody>
+            {% if 'cart_item' in session %}
+            {% for key, value in session['cart_item'].items() %}
+            {% set product_name = session['cart_item'][key]['name'] %}
+            {% set price = session['cart_item'][key]['price'] %}
+            {% set product_id = session['cart_item'][key]['product_id'] %}
+            <tr>
+                <td class="col-2"><strong>{{ product_name }} </strong></td>
+                <td class="col-2"><strong>{{ price }} </strong></td>
+                <td class="col-2"><strong>{{ product_id }} </strong></td>
+                <td class="col-2" style="text-align: center">
+                    <input type="email" class="form-control" value="{{ quantity }}">
+                </td>
+                <!-- <td calss="col-sm-3 col-md-3"> <input type = 'number' step = '1' min = '0' max = '20'/> </td> -->
+                <td class="col-2">                              
+                    <a href = "{{ url_for('delete_product', product_id = session['cart_item'][key]['product_id']) }}" button type="submit" class="btn btn-danger">
+                        Delete
+                    </a>
+                    <!-- <form action="/delete" method="POST">
+                        <input type="hidden" name="product_id" value="{{ product_id }}">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form> -->
+                </td>
                 </div>
-            </div>
-        </div> 
-      
+            </tr>
+            {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
+    <br><br>
+    <div class="row text-center">
+        <div class="col-3"></div>
+        <div class="col-1"></div>
+        <div class="col-2">
+            <form action="/buy" method="POST">
+                <button type="submit" class="btn btn-info"> Add </button>
+            </form>
+        </div>
+        <div class="col-2">
+            <a href="{{url_for('product')}}" class="btn btn-secondary">回到主畫面</a>
+        </div>
+        <div class="col-3"></div>    
+    </div>
 </body>
 </html>
 
