--- a/templates/Member_Profile.html
+++ b/templates/Member_Profile.html
@@ -31,33 +31,40 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-2">Email : </div>
-            <div class="col text-center"><!-- 放資料 --></div>
+            <div class="col-2 text-center">{{session["email"]}}</div>
             <div class="col-5"></div>
-        </div>
+        </div><br>
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-2">Password : </div>
-            <div class="col text-center"><!-- 放資料 --></div>
+            <div class="col-2 " style="margin: auto;">Password : </div>
+            <div class="col-2">
+                <input type="password" class="form-control" name="password"></div>
             <div class="col-5"></div>
-        </div>
+        </div><br>
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-2">Birth Date : </div>
-            <div class="col text-center"><!-- 放資料 --></div>
+            <div class="col-2" style="margin: auto;">Birth Date : </div>
+            <div class="col-2">
+                <input type="date" class="form-control" name="bdate">
+            </div>
             <div class="col-5"></div>
-        </div>
+        </div><br>
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-2">Cellphone : </div>
-            <div class="col text-center"><!-- 放資料 --></div>
+            <div class="col-2" style="margin: auto;">Cellphone : </div>
+            <div class="col-2">
+                <input type="tel" class="form-control" name="phone">
+            </div>
             <div class="col-5"></div>
-        </div>
+        </div><br>
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-2">Address : </div>
-            <div class="col text-center"><!-- 放資料 --></div>
+            <div class="col-2" style="margin: auto;">Address : </div>
+            <div class="col-2">
+                <input type="tel" class="form-control" name="address">
+            </div>
             <div class="col-5"></div>
-        </div>
+        </div><br>
         <p style="text-align: center;"><br>
         <button type="button" class="btn btn-dark col-2" value="{{url_for('edit')}}">edit</button>
         </p>
