--- a/templates/Register.html
+++ b/templates/Register.html
@@ -52,8 +52,8 @@
                             <input type="tel" class="form-control" name="address">
                         </div>
                         <div class="col-md-12">
-                            <label class="form-label">Is_Seller(True=1,False=0):</label>
-                            <input type="number" class="form-control" name="is_seller">
+                            <label class="form-label">Is_Seller(Left: False, Right: True):</label>
+                            <input type="range" min="0" max="1" value="0" step="1" class="form-control" name="is_seller">
                         </div>
                         <br>
                         <div class="col-md-12 text-center">
